--- a/salon.html
+++ b/salon.html
@@ -7,7 +7,7 @@
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-content">
-                    <strong>SIO CHAT</strong>
+                    <strong>SIO CHATS !</strong>
                 </div>
             </div>
         </div>
